[package]
name = "chash-trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
dashmap = "5.3.4"
once_cell = "1.13.0"

[dev-dependencies]
clap = { version = "3.2.14", features = ["derive"] }
rand = "0.8.5"
trie-rs = "0.1.1"
fnv = "1.0.7"

[feature]
rayon = ["dashmap/rayon"]
